# octo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  compile_flags.txt  test.pl
include/: array_list.h  codegen.h  debug.h  error.h  globals.h  parser.h  semantic.h  symboltable.h  tokenizer.h  type.h
octoruntime/: types.h
src/: array_list.c  codegen.c  debug.c  error.c  main.c  parser.c  semantic.c  symboltable.c  tokenizer.c
